<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@drawable/background_game_new1">

    <TextView
        android:id="@+id/textView_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/button_menu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/spinner_menu"
        android:layout_centerHorizontal="true"
        android:text="@string/start_button"
        android:onClick="setDifficulty"/>

    <TextView
        android:id="@+id/textViewChoose_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@id/textView_menu"
        android:text="@string/spinner_prompt"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spinner_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:dropDownSelector="@color/colorPrimary"
        android:layout_below="@id/textViewChoose_menu"
        android:layout_marginTop="30dp"
        android:entries="@array/spinner_entries"/>

        <TextView
            android:id="@+id/textViewInstruction_menu"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_menu"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/instructions"
            android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonInstruction_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_menu"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/show_instructions"
        android:onClick="showInstructions"/>

</RelativeLayout>