<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_game_new1"
    tools:context=".WinActivity">

    <TextView
        android:id="@+id/textView_win"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buttonPlay_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_win"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/play_again"
        android:onClick="playAgain"/>

    <Button
        android:id="@+id/button_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewAbout_win"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/exit_button"
        android:onClick="exitGame"/>

    <TextView
        android:id="@+id/textViewAbout_win"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonPlay_win"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:visibility="invisible"
        android:text="@string/about"/>

    <Button
        android:id="@+id/buttonAbout_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonPlay_win"
        android:layout_marginTop="75dp"
        android:text="@string/show_about"
        android:onClick="showAbout"/>

</RelativeLayout>