<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInput"
    android:background="@drawable/background_game_new1"
    android:id="@+id/relative_input">

    <TextView
        android:id="@+id/textView_user_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:text="@string/player_one"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/editText_user_input"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/input_hint"
        android:textColorHint="@color/colorGreyHint"
        android:inputType="number"
        android:background="@drawable/edittext_rounded"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView_user_input"
        android:layout_marginTop="50dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/button_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editText_user_input"
        android:layout_marginTop="50dp"
        android:onClick="getStartNum"/>

</RelativeLayout>