<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/background_game_new1"
    android:id="@+id/relative_game">

    <TextView
        android:id="@+id/textView_activity_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:text="@string/player_one"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/editText_activity_game"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/input_hint"
        android:textColorHint="@color/colorGreyHint"
        android:inputType="number"
        android:background="@drawable/edittext_rounded"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView_activity_game"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buttonCheck_activity_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editText_activity_game"
        android:layout_marginTop="20dp"
        android:onClick="getGuessNum"/>

    <ScrollView
        android:id="@+id/scrollViewP1_activity_game"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/buttonCheck_activity_game"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textViewScrollP1_activity_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

    </ScrollView>

    <ScrollView
        android:id="@+id/scrollViewP2_activity_game"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/buttonCheck_activity_game"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textViewScrollP2_activity_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

    </ScrollView>

    <Button
        android:id="@+id/buttonEnd_activity_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollViewP1_activity_game"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/end_button"
        android:onClick="endTurn"/>

    <TextView
        android:id="@+id/textViewDisplayNum_activity_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_below="@id/buttonEnd_activity_game"
        android:layout_marginTop="20dp"
        android:text="@string/display_num"
        android:textSize="12sp"
        android:textColor="@color/colorBlack"/>

</RelativeLayout>